--- a/xpi/content/css/bmbut_bmbnounsort.css
+++ b/xpi/content/css/bmbut_bmbnounsort.css
@@ -3,8 +3,11 @@
 @-moz-document url(chrome://browser/content/browser.xul) {
 
 	* #ctraddon_BMB_unsortedBookmarks_m,
+	* #ctraddon_BMB_unsortedBookmarks_mm,
 	#ctraddon_BMB_bookmarksPopup .hide-if-empty-places-result,
-	#ctraddon_BMB_unsortedBookmarks{
+	#ctraddon_BMB_unsortedBookmarks,
+	#bookmarksMenuPopup .hide-if-empty-places-result,
+	#menu_unsortedBookmarks {
 	  display:none !important;
 	}
 
