--- a/xpi/content/css/bmbut_unsortedbookm.css
+++ b/xpi/content/css/bmbut_unsortedbookm.css
@@ -2,10 +2,12 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-	#ctraddon_BMB_unsortedBookmarks_m {
+	#ctraddon_BMB_unsortedBookmarks_m,
+	#ctraddon_BMB_unsortedBookmarks_mm {
 	  visibility: visible !important;
 	}
 
+	#menu_unsortedBookmarks,
 	#ctraddon_BMB_bookmarksPopup .hide-if-empty-places-result,
 	#ctraddon_BMB_unsortedBookmarks{
 	  display:none !important;
