--- a/xpi/content/css/alt_optionspage.css
+++ b/xpi/content/css/alt_optionspage.css
@@ -134,6 +134,11 @@
 	  min-height: unset !important;
 	  height: 24px !important;
 	}
+	
+	.autocomplete-tree treecols,
+	.autocomplete-tree treecol {
+	  height: unset !important;
+	}
 
 	/* buttons / menulists */
 	button:not(.button-link):not(.close-icon),
@@ -227,4 +232,9 @@
 *[subdialog="true"] treecol {
   min-height: unset !important;
   height: 26px !important;
+}
+
+*[subdialog="true"] .autocomplete-tree treecols,
+*[subdialog="true"] .autocomplete-tree treecol {
+  height: unset !important;
 }
