--- a/xpi/content/css/linux/smallnavbutextra.css
+++ b/xpi/content/css/linux/smallnavbutextra.css
@@ -133,6 +133,14 @@
 	#main-window[defaultfxtheme="true"] #nav-bar .searchbar-textbox[focused] {
 	  border-color: Highlight !important;
 	}
+	
+	/* tweaks for text/full modes */
+	#nav-bar[mode="text"] toolbarbutton .toolbarbutton-text,
+	#nav-bar[mode="full"] toolbarbutton .toolbarbutton-text {
+	  background: none !important;
+	  box-shadow: none !important;
+	  border: unset !important;
+	}
 
 	/*buttons with SVG images*/
 	#nav-bar .toolbarbutton-1[image$="svg"] .toolbarbutton-icon {
