--- a/xpi/content/css/oldsearch.css
+++ b/xpi/content/css/oldsearch.css
@@ -7,9 +7,14 @@
 	  -moz-binding: url("chrome://classic_theme_restorer/content/ctr_oldsearch.xml#searchbar") !important;
 	}
 	
-	searchbar .searchbar-textbox {
+	#main-window:not([searchwp-moz-platform]) searchbar .searchbar-textbox {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/ctr_oldsearch.xml#searchbar-textbox") !important;
 	}
+	
+	/* SearchWP add-on support */
+	/*#main-window[searchwp-moz-platform] searchbar .searchbar-textbox {
+	  -moz-binding: url("chrome://searchwp/content/searchbox.xml#searchbox") !important;
+	}*/
 
 	.searchbar-engine-button {
 	  -moz-appearance: none !important;
