--- a/xpi/content/css/linux/smallnavbutextra.css
+++ b/xpi/content/css/linux/smallnavbutextra.css
@@ -176,6 +176,14 @@
 	  margin-right: 2px !important;
       margin-left: 2px !important;
 	}
+	
+	#navigator-toolbox #nav-bar toolbarbutton .toolbarbutton-badge-stack .toolbarbutton-badge {
+      min-width: 0px !important;
+	  width: 10px !important;
+      font-size:60% !important;
+	  margin-top: -4px !important;
+	  -moz-margin-end: -3px !important;
+	}
 
 	#nav-bar toolbarbutton .toolbarbutton-badge-container,
 	#nav-bar toolbarbutton .toolbarbutton-badge-stack {
