--- a/xpi/content/css/mode_icons_big.css
+++ b/xpi/content/css/mode_icons_big.css
@@ -225,46 +225,74 @@
 	}
 	
 	/*call button*/
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"] > .toolbarbutton-badge-stack image {
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"] > .toolbarbutton-badge-container image,
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"] > .toolbarbutton-badge-stack image {
 	  list-style-image: url(chrome://browser/skin/loop/menuPanel.png) !important;
 	  -moz-image-region: rect(0, 32px, 32px, 0) !important;
 	}
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"][state="disabled"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"][disabled="true"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"][state="disabled"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"][disabled="true"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"][state="disabled"] > .toolbarbutton-badge-stack image,
-	#nav-bar #loop-button[cui-areatype="toolbar"][disabled="true"] > .toolbarbutton-badge-stack image{
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"][state="disabled"] > .toolbarbutton-badge-container image,
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"][disabled="true"] > .toolbarbutton-badge-container image,
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"][state="disabled"] > .toolbarbutton-badge-stack image,
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"][disabled="true"] > .toolbarbutton-badge-stack image{
+	  list-style-image: url(chrome://browser/skin/loop/menuPanel.png) !important;
 	  -moz-image-region: rect(0, 64px, 32px, 32px) !important;
 	}
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"]:not([disabled="true"])[state="error"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="error"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="error"] > .toolbarbutton-badge-stack image {
+	#nav-bar toolbarbutton[id^="loop-"]:not([disabled="true"])[state="error"] > .toolbarbutton-badge-container image,
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="error"] > .toolbarbutton-badge-stack image {
+	  list-style-image: url(chrome://browser/skin/loop/menuPanel.png) !important;
 	  -moz-image-region: rect(0, 96px, 32px, 64px) !important;
 	}
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"]:not([disabled="true"])[state="action"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="action"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-call-button[cui-areatype="toolbar"]:not([disabled="true"])[state="action"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="action"] > .toolbarbutton-badge-stack image{
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="action"] > .toolbarbutton-badge-container image,
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="action"] > .toolbarbutton-badge-stack image{
+	  list-style-image: url(chrome://browser/skin/loop/menuPanel.png) !important;
 	  -moz-image-region: rect(0, 128px, 32px, 96px) !important;
 	}
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"]:not([disabled="true"])[state="action"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="action"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="action"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-stack image{
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="action"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-container image,
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="action"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-stack image{
+	  list-style-image: url(chrome://browser/skin/loop/menuPanel.png) !important;
 	  -moz-image-region: rect(0, 160px, 32px, 128px) !important;
 	}
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"]:not([disabled="true"])[state="active"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="active"] > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="active"] > .toolbarbutton-badge-stack image {
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="active"] > .toolbarbutton-badge-container image,
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="active"] > .toolbarbutton-badge-stack image {
+	  list-style-image: url(chrome://browser/skin/loop/menuPanel.png) !important;
 	  -moz-image-region: rect(0, 192px, 32px, 160px) !important;
 	}
-	#nav-bar #loop-button-throttled[cui-areatype="toolbar"]:not([disabled="true"])[state="active"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="active"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-container image,
-	#nav-bar #loop-button[cui-areatype="toolbar"]:not([disabled="true"])[state="active"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-stack image{
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="active"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-container image,
+	#nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="active"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-stack image{
+	  list-style-image: url(chrome://browser/skin/loop/menuPanel.png) !important;
 	  -moz-image-region: rect(0, 224px, 32px, 192px) !important;
 	}
+	
+	#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"] > .toolbarbutton-badge-stack image{
+      list-style-image: url("chrome://loop/skin/toolbar@2x.png") !important;
+      -moz-image-region: rect(0, 36px, 36px, 0) !important;
+	}
+	#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"][state="disabled"] > .toolbarbutton-badge-stack image,
+	#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"][disabled="true"] > .toolbarbutton-badge-stack image{
+	  list-style-image: url("chrome://loop/skin/toolbar@2x.png") !important;
+	  -moz-image-region: rect(0, 72px, 36px, 36px) !important;
+	}
+	#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="error"] > .toolbarbutton-badge-stack image {
+	  list-style-image: url("chrome://loop/skin/toolbar@2x.png") !important;
+	  -moz-image-region: rect(0, 108px, 36px, 72px) !important;
+	}
+	#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="action"] > .toolbarbutton-badge-stack image{
+	  list-style-image: url("chrome://loop/skin/toolbar@2x.png") !important;
+	  -moz-image-region: rect(0, 144px, 36px, 108px) !important;
+	}
+	#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="action"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-stack image{
+	  list-style-image: url("chrome://loop/skin/toolbar@2x.png") !important;
+	  -moz-image-region: rect(0, 180px, 36px, 144px) !important;
+	}
+	#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="active"] > .toolbarbutton-badge-stack image {
+	  list-style-image: url("chrome://loop/skin/toolbar@2x.png") !important;
+	  -moz-image-region: rect(0, 216px, 36px, 180px) !important;
+	}
+	#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"][cui-areatype="toolbar"]:not([disabled="true"])[state="active"]:-moz-any(:hover,:hover:active,[open]) > .toolbarbutton-badge-stack image{
+	  list-style-image: url("chrome://loop/skin/toolbar@2x.png") !important;
+	  -moz-image-region: rect(0, 252px, 36px, 216px) !important;
+	}
+
 	#nav-bar .toolbarbutton-badge-stack image,
 	#nav-bar .toolbarbutton-badge-container image {
 	  min-width:32px !important;
