--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -550,7 +550,8 @@ radio.ctraddontab .radio-check-box1 {
 #ctraddon_pw_addonversion label,
 #ctraddon_pw_am_nowarning label,
 #ctraddon_pw_am_compact label,
-#ctraddon_pw_am_compact2 label {
+#ctraddon_pw_am_compact2 label,
+#ctraddon_pw_am_highlight label {
   background:url('chrome://classic_theme_restorer/content/images/appmenu_addons_lin.png') no-repeat left !important;
   padding-left:20px !important;
   min-height:16px !important;
