--- a/xpi/content/css/am_highlight.css
+++ b/xpi/content/css/am_highlight.css
@@ -5,8 +5,16 @@
 	  background: Highlight !important;
 	  color: HighlightText !important;
 	}
-	#addons-page .main-content .addon:hover .content-inner-container label{
+	#addons-page .main-content .addon:hover .button-link label,
+	#addons-page .main-content .addon:hover .basicinfo-container label,
+	#addons-page .main-content .addon:hover .description-container label,
+	#addons-page .main-content .addon:hover .relnotes-toggle:not(:hover) label{
 	  color: HighlightText !important;
+	}
+	
+	#addons-page .main-content .addon:hover .button-link:hover label {
+	  text-decoration: underline !important;
+	  text-decoration-color: HighlightText !important;
 	}
 
 }
