--- a/xpi/content/css/bmbut_unsortedbookm.css
+++ b/xpi/content/css/bmbut_unsortedbookm.css
@@ -8,10 +8,13 @@
 	}
 
 	#menu_unsortedBookmarks,
-	#bookmarksMenuPopup .hide-if-empty-places-result,
-	#ctraddon_BMB_bookmarksPopup .hide-if-empty-places-result,
 	#ctraddon_BMB_unsortedBookmarks{
 	  display:none !important;
+	}
+
+	#ctraddon_BMB_bookmarksPopup .hide-if-empty-places-result,
+	#bookmarksMenuPopup .hide-if-empty-places-result {
+	  visibility: collapse !important;
 	}
 
 }
