--- a/xpi/content/css/win8/alt_optionswindow2extra.css
+++ b/xpi/content/css/win8/alt_optionswindow2extra.css
@@ -8,10 +8,10 @@
 	}
 }
 
-window[subdialog="true"] textbox {
+*[subdialog="true"] textbox {
   -moz-appearance: textfield !important;
 }
-window[subdialog="true"] treecol {
+*[subdialog="true"] treecol {
   -moz-appearance: treeheadercell !important;
   color: black !important;
 }
