--- a/xpi/content/css/winxp/alt_optionswindow2extra.css
+++ b/xpi/content/css/winxp/alt_optionswindow2extra.css
@@ -3,6 +3,7 @@
 				url-prefix(chrome://browser/content/preferences/),
 				url-prefix(chrome://mozapps/content/preferences/),
 				url-prefix(chrome://passwordmgr/content/passwordManager.xul),
+				url-prefix(chrome://passwordmgr/content/passwordManagerExceptions.xul),
 				url-prefix(chrome://mozapps/content/preferences/changemp.xul) {
 
 	textbox {
