--- a/xpi/content/css/winaero/alt_optionswindow2extra.css
+++ b/xpi/content/css/winaero/alt_optionswindow2extra.css
@@ -3,7 +3,9 @@
 				url-prefix(chrome://browser/content/preferences/),
 				url-prefix(chrome://mozapps/content/preferences/),
 				url-prefix(chrome://passwordmgr/content/passwordManager.xul),
+				url-prefix(chrome://passwordmgr/content/passwordManagerExceptions.xul),
 				url-prefix(chrome://mozapps/content/preferences/changemp.xul) {
+
 	textbox {
 	  -moz-appearance: textfield !important;
 	}
