--- a/xpi/content/css/empty_favicon_t1.css
+++ b/xpi/content/css/empty_favicon_t1.css
@@ -6,6 +6,7 @@
 	  display:inline !important;
 	}
 	
+	#main-window[fx44plus="true"] .tabbrowser-tab[pinned] .tab-icon-image:not([src]),
 	#main-window[fx44plus="true"] .tabbrowser-tab:not([pinned]) .tab-icon-image:not([src]) {
 	  list-style-image:url('chrome://classic_theme_restorer/content/images/default_dot_favicon.png') !important;
 	}
