--- a/xpi/content/css/empty_favicon_t2.css
+++ b/xpi/content/css/empty_favicon_t2.css
@@ -6,7 +6,9 @@
 	  display:inline !important;
 	}
 	
+	#main-window .tabbrowser-tab[pinned] .tab-icon-image:not([src]),
 	#main-window .tabbrowser-tab:not([pinned]) .tab-icon-image:not([src]),
+	#main-window[fx44plus="true"] .tabbrowser-tab[pinned] .tab-icon-image:not([src]),
 	#main-window[fx44plus="true"] .tabbrowser-tab:not([pinned]) .tab-icon-image:not([src]) {
 	  list-style-image:url('chrome://classic_theme_restorer/content/images/default_favicon.png') !important;
 	}
