--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -673,6 +673,7 @@ radio.ctraddontab .radio-check-box1 {
 
 /*PM button menuitem*/
 #ctraddon_pw_appbutton_pm label,
+#ctraddon_pw_appbutton_pm2 label,
 #ctraddon_pw_pmhidelabels label {
   background:url('chrome://classic_theme_restorer/content/images/panelui.png') no-repeat left !important;
   padding-left:20px !important;
