--- a/xpi/content/css/mode_txtonly.css
+++ b/xpi/content/css/mode_txtonly.css
@@ -111,7 +111,8 @@
 	}
 	
 	toolbar .toolbarbutton-badge-stack {
-	  display: none !important;
+	  visibility:collapse !important;
+	  display: -moz-box !important;
 	}
 	
 }
