--- a/xpi/content/css/win8/alt_optionswindow2extra.css
+++ b/xpi/content/css/win8/alt_optionswindow2extra.css
@@ -15,3 +15,6 @@
   -moz-appearance: treeheadercell !important;
   color: black !important;
 }
+*[subdialog="true"] #signonsTree treecolpicker{
+  -moz-appearance: treeheadercell !important;
+}
