--- a/xpi/content/css/winaero/alt_optionswindow2extra.css
+++ b/xpi/content/css/winaero/alt_optionswindow2extra.css
@@ -63,9 +63,16 @@
   -moz-appearance: treeheadercell !important;
   color: black !important;
 }
+*[subdialog="true"] #signonsTree treecolpicker{
+  -moz-appearance: treeheadercell !important;
+}
 @media all and (-moz-windows-classic) {
   *[subdialog="true"] treecol {
 	-moz-appearance: button !important;
 	color: black !important;
+  }
+  *[subdialog="true"] #signonsTree treecolpicker{
+  	-moz-appearance: button !important;
+	padding: unset !important;
   }
 }
